--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,12 @@ dependencies {
 	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.2'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+
+	//xss예방 - 네이버 filter
+	implementation 'com.navercorp.lucy:lucy-xss-servlet:2.0.0'
+	implementation 'com.navercorp.lucy:lucy-xss:1.6.3'
+	//StringEscapeUtils 를 사용하기 위해 commons-text 의존성 추가
+	implementation 'org.apache.commons:commons-text:1.8'
 }
 
 tasks.named('test') {
