--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,8 +37,8 @@ jobs:
           java-version: '11'
 
         # 권한 재설정
-      - name: Run chmod to make gradlew executable
-        run: chmod +x ./gradle
+        - name: Run chmod to make gradlew executable
+          run: chmod +x ./gradlew
 
       # (3) Gradle build (Test 제외)
       - name: Build with Gradle
