--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ env:
   S3_IMAGE_BUCKET_NAME: hanghae99-wonyoung
   CODE_DEPLOY_APPLICATION_NAME: my-codedeploy-app
   CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: my-codedeploy-deployment-group
+  RESOURCE_PATH: ./src/main/resources/application.yml
 
 
 permissions:
