--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,10 @@ on:
 # 리전, 버킷 이름, CodeDeploy 앱 이름, CodeDeploy 배포 그룹 이름
 env:
   AWS_REGION: ap-northeast-2
-  S3_BUCKET_NAME: my-github-actions-s3-bucket1
+  S3_BUCKET_NAME: hanghae99-wonyoung
   S3_IMAGE_BUCKET_NAME: hanghae99-wonyoung
-  CODE_DEPLOY_APPLICATION_NAME: my-codedeploy-app
-  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: my-codedeploy-deployment-group
+  CODE_DEPLOY_APPLICATION_NAME: git_action_wonyoung
+  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: git_action_wonyoung
   RESOURCE_PATH: ./src/main/resources/application.yml
 
 
